--- a/app/index.html
+++ b/app/index.html
@@ -22,11 +22,18 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+
+        <!--[if lt IE 9]>
+        <!-- build:js scripts/ie-dependencies.js -->
+        <!-- bower:js -->
+            <script src="scripts/vendors/html5shiv.min.js"></script>
+            <script src="scripts/vendors/respond.min.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+        <![endif]-->
     </head>
     <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        
 
 
         <div class="hero-unit">
@@ -48,7 +55,7 @@
 
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/main.js"></script>
+        <script src="scripts/pb.main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
