added snappish for home page animation frames

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
-
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -26,30 +25,37 @@
         <!--[if lt IE 9]>
         <!-- build:js scripts/ie-dependencies.js -->
         <!-- bower:js -->
-            <script src="scripts/vendors/html5shiv.min.js"></script>
-            <script src="scripts/vendors/respond.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
         <![endif]-->
     </head>
     <body>
+      <header>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="logo col-xs-12 col-sm-4"><a href="#">LOGO HERE</a></div>
+            <nav class="col-xs-12 col-sm-8">
+              <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+              </ul>
+            </nav>
+          </div><!--/.row-fluid-->
+        </div><!--/.container-fluid-->
+      </header> 
+
+      <div class="content-area">
         
+      </div><!--/.content-area-->
 
+      <footer>
 
-        <div class="hero-unit">
-          <h1>'Allo, 'Allo!</h1>
-          <p>You now have</p>
-          <ul>
-            <li>HTML5 Boilerplate</li>
-            <li>Sass</li>
-
-          </ul>
-        </div>
+      </footer>
 
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
