--- a/app/index.html
+++ b/app/index.html
@@ -41,17 +41,27 @@
       <div id="home-area">
         <div id="wrapper">
           <div class="header">
-              <button class="up">up</button>
+              <!--<button class="up">up</button>
               <button class="down">down</button>
               <button class="top">top</button>
-              <button class="bottom">bottom</button>
+              <button class="bottom">bottom</button>-->
           </div>
           <div class="snappish-main">
-              <article class="welcome"></article>
-              <article class="brand-story-1"></article>
-              <article class="brand-story-2"></article>
-              <article class="brand-story-3"></article>
-              <article class="brand-story-4"></article>
+              <article class="welcome">
+
+              </article><!--/.welcome-->
+              <article class="brand-story-1">
+
+              </article><!--/.brand-story-1-->
+              <article class="brand-story-2">
+
+              </article><!--/.brand-story-3-->
+              <article class="brand-story-3">
+
+              </article><!--/.brand-story-3-->
+              <article class="brand-story-4">
+
+              </article><!--/.brand-story-4-->
           </div>
         </div><!--/#wrapper-->
       </div><!--#content-area-->
