--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,23 @@
           </div>
           <div class="snappish-main">
               <article class="welcome">
-
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-xs-12 col-sm-3">
+                        <a href="#" class="story-1">BRAND STORY 1</a>
+                      </div><!--/.col-sm-4.col-xs-12-->
+                      <div class="col-xs-12 col-sm-3">
+                        <a href="#" class="story-2">BRAND STORY 2</a>
+                      </div><!--/.col-sm-4.col-xs-12-->
+                      <div class="col-xs-12 col-sm-3">
+                        <a href="#" class="story-3">BRAND STORY 3</a>
+                      </div><!--/.col-sm-4.col-xs-12-->
+                      <div class="col-xs-12 col-sm-3">
+                        <a href="#" class="story-4">BRAND STORY 4</a>
+                      </div><!--/.col-sm-4.col-xs-12-->
+                    </div>
+                    <img class="down-arrow" src="images/arrow.png">
+                  </div>
               </article><!--/.welcome-->
               <article class="brand-story-1">
 
@@ -71,13 +87,11 @@
 
 
         <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery.mousewheel.min.js"></script>
         <script src="scripts/vendors/jquery/jquery.event.move.js"></script>
         <script src="scripts/vendors/jquery/jquery.event.swipe.js"></script>
         <script src="scripts/vendors/snappish/jquery.snappish.js"></script>
-        <!-- endbower -->
         <!-- endbuild -->
 
 
