brand story url push states with http requests for content

--- a/app/index.html
+++ b/app/index.html
@@ -40,12 +40,7 @@
       </header>
       <div id="home-area">
         <div id="wrapper">
-          <div class="header">
-              <!--<button class="up">up</button>
-              <button class="down">down</button>
-              <button class="top">top</button>
-              <button class="bottom">bottom</button>-->
-          </div>
+          <div class="header"></div>
           <div class="snappish-main">
               <article class="welcome">
                   <div class="container-fluid">
@@ -66,16 +61,16 @@
                     <img class="down-arrow" src="images/arrow.png">
                   </div>
               </article><!--/.welcome-->
-              <article class="brand-story-1">
+              <article data-url="brand-story-1" data-content="story-1-content">
 
               </article><!--/.brand-story-1-->
-              <article class="brand-story-2">
+              <article data-url="brand-story-2" data-content="story-2-content">
 
               </article><!--/.brand-story-3-->
-              <article class="brand-story-3">
+              <article data-url="brand-story-3" data-content="story-3-content">
 
               </article><!--/.brand-story-3-->
-              <article class="brand-story-4">
+              <article data-url="brand-story-4" data-content="story-4-content">
 
               </article><!--/.brand-story-4-->
           </div>
