udpated file names to match animation discovery for homepage

--- a/app/index.html
+++ b/app/index.html
@@ -45,32 +45,40 @@
               <article class="welcome">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-12 col-sm-3">
-                        <a href="#" class="story-1">BRAND STORY 1</a>
-                      </div><!--/.col-sm-4.col-xs-12-->
-                      <div class="col-xs-12 col-sm-3">
-                        <a href="#" class="story-2">BRAND STORY 2</a>
-                      </div><!--/.col-sm-4.col-xs-12-->
-                      <div class="col-xs-12 col-sm-3">
-                        <a href="#" class="story-3">BRAND STORY 3</a>
-                      </div><!--/.col-sm-4.col-xs-12-->
-                      <div class="col-xs-12 col-sm-3">
-                        <a href="#" class="story-4">BRAND STORY 4</a>
-                      </div><!--/.col-sm-4.col-xs-12-->
+                      <div class="col-xs-12 page-title">
+                        <h1>Dicut tacimates ei vim</h1>
+                      </div><!--/.col-xs-12-->
+                    </div><!--/.row-->
+                    <div class="row">
+                      <div class="col-xs-12 col-sm-2 col-sm-offset-1">
+                        <a href="#" class="category-1">Customer Information Management</a>
+                      </div><!--/.col-sm-2.col-xs-12-->
+                      <div class="col-xs-12 col-sm-2">
+                        <a href="#" class="category-2">Customer Engagement Solutions</a>
+                      </div><!--/.col-sm-2.col-xs-12-->
+                      <div class="col-xs-12 col-sm-2">
+                        <a href="#" class="category-3">Shipping and Mailing</a>
+                      </div><!--/.col-sm-2.col-xs-12-->
+                      <div class="col-xs-12 col-sm-2">
+                        <a href="#" class="category-4">Global eCommerce</a>
+                      </div><!--/.col-sm-2.col-xs-12-->
+                      <div class="col-xs-12 col-sm-2 last">
+                        <a href="#" class="category-5">Location Intelligence</a>
+                      </div><!--/.col-sm-2.col-xs-12-->
                     </div>
                     <img class="down-arrow" src="images/arrow.png">
                   </div>
               </article><!--/.welcome-->
-              <article data-url="brand-story-1" data-content="story-1-content">
+              <article id="story-1">
 
               </article><!--/.brand-story-1-->
-              <article data-url="brand-story-2" data-content="story-2-content">
+              <article id="story-2">
 
               </article><!--/.brand-story-3-->
-              <article data-url="brand-story-3" data-content="story-3-content">
+              <article id="story-3">
 
               </article><!--/.brand-story-3-->
-              <article data-url="brand-story-4" data-content="story-4-content">
+              <article id="story-4">
 
               </article><!--/.brand-story-4-->
           </div>
