--- a/app/index.html
+++ b/app/index.html
@@ -42,27 +42,32 @@
         <div id="wrapper">
           <div class="header"></div>
           <div class="snappish-main">
-              <article class="welcome">
+              <article class="welcome" id="welcome">
+                  <div class="catbg"></div>
                   <div class="container-fluid">
                     <div class="row">
                       <div class="col-xs-12 page-title">
-                        <h1>Dicut tacimates ei vim</h1>
+                        <h1 class="init">Dicut tacimates ei vim</h1>
+                        <h2 class="category-1">lorem ipsum dolor sit</h2>
+                        <h2 class="category-2">category 2 headline</h2>
+                        <h2 class="category-3">category 3 headline</h2>
+                        <h2 class="category-4">category 4 headline</h2>
                       </div><!--/.col-xs-12-->
                     </div><!--/.row-->
-                    <div class="row">
-                      <div class="col-xs-12 col-sm-2 col-sm-offset-1">
+                    <div class="row links">
+                      <div class="cat col-xs-12 col-sm-2 col-sm-offset-1">
                         <a href="#" class="category-1">Customer Information Management</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="col-xs-12 col-sm-2">
+                      <div class="cat col-xs-12 col-sm-2">
                         <a href="#" class="category-2">Customer Engagement Solutions</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="col-xs-12 col-sm-2">
+                      <div class="cat col-xs-12 col-sm-2">
                         <a href="#" class="category-3">Shipping and Mailing</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="col-xs-12 col-sm-2">
+                      <div class="cat col-xs-12 col-sm-2">
                         <a href="#" class="category-4">Global eCommerce</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="col-xs-12 col-sm-2 last">
+                      <div class="cat col-xs-12 col-sm-2 last">
                         <a href="#" class="category-5">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                     </div>
@@ -70,8 +75,15 @@
                   </div>
               </article><!--/.welcome-->
               <article id="story-1">
-
-              </article><!--/.brand-story-1-->
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="story-title col-xs-12 col-sm-4 col-sm-offset-4">
+                        <h3>LOREM IPSUM DE AMET</h3>
+                        <p>Lorem ipsum dolor amet, dicunt tacimates ai vim, te viris mediocrem mei. Eu eum sint debet intellegat. Alii alia pro ad, pri at mutat accusamus. Vel ut nihil laudem petentium.<p>
+                    </div>
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/#story-1-->
               <article id="story-2">
 
               </article><!--/.brand-story-3-->
@@ -101,6 +113,8 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.home.js"></script>
+        <script src="scripts/brand-story/pb.welcome.js"></script>
+        <script src="scripts/brand-story/pb.story1.js"></script>
         <!-- endbuild -->
 
 </body>
