--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="logo col-xs-12 col-sm-4"><a href="#"></a></div>
+            <div class="logo col-xs-12 col-sm-4"  ><a href="#"></a></div>
             <nav class="col-xs-12 col-sm-8"></nav>
           </div><!--/.row-fluid-->
         </div><!--/.container-fluid-->
@@ -99,6 +99,39 @@
       <footer>
 
       </footer>
+      <div class="menu-overlay">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <a href="#" class="logo"><img src="images/logo.png" /></a>
+            </div>
+          </div>
+        </div>
+        <div class="table">
+          <div class="vertical-wrap">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-12">
+                  <ul class="catLinks">
+                    <li><a href="#">Customer Information Management</a></li>
+                    <li><a href="#">Location Intelligence</a></li>
+                    <li><a href="#">Customer Engagement</a></li>
+                    <li><a href="#">Shipping and Mailing</a></li>
+                    <li><a href="#">Global eCommerce</a></li>
+                  </ul>
+                </div>
+              </div>
+              <ul class="bottomLinks row">
+                <li class="col-sm-2 col-xs-12 col-sm-offset-1"><a href="#">Enterprise Support</a></li>
+                <li class="col-sm-2 col-xs-12"><a href="#">Industries</a></li>
+                <li class="col-sm-2 col-xs-12"><a href="#">Ink and Supplies</a></li>
+                <li class="col-sm-2 col-xs-12"><a href="#">Small Business</a></li>
+                <li class="last"><a href="#">U.S. English</a></li>
+              </ul>
+            </div><!--/.container-fluid-->
+          </div><!--/.vertical-wrap-->
+        </div><!--/.table-->
+      </div><!--/.menu-overlay-->
 
 
         <!-- build:js scripts/vendor.js -->
@@ -113,6 +146,7 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.home.js"></script>
+        <script src="scripts/pb.menu.js"></script>
         <script src="scripts/brand-story/pb.welcome.js"></script>
         <script src="scripts/brand-story/pb.story1.js"></script>
         <!-- endbuild -->
