--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>PB</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width,minimal-ui">
         <meta property="og:title" content=""/>
         <meta property="og:url" content=""/>
         <meta property="og:site_name" content="" />
@@ -25,6 +25,8 @@
         <!--[if lt IE 9]>
         <!-- build:js scripts/ie-dependencies.js -->
         <!-- bower:js -->
+        <script src="scripts/vendors/html5shiv.min.js"></script>
+        <script src="scripts/vendors/respond.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
         <![endif]-->
@@ -33,8 +35,14 @@
       <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="logo col-xs-12 col-sm-4"  ><a href="#"></a></div>
-            <nav class="col-xs-12 col-sm-8"></nav>
+            <div class="logo col-xs-12 col-sm-4"><a href="#" class="logo"><img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/></a></div>
+            <nav class="col-xs-12 col-sm-8">
+              <ul>
+                <li><a href="#" class="icn-menu"></a><li>
+                <li><a href="#" class="icn-search"></a></li>
+                <li><a href="#" class="icn-cart"></a></li>
+              </ul>
+            </nav>
           </div><!--/.row-fluid-->
         </div><!--/.container-fluid-->
       </header>
@@ -100,13 +108,16 @@
 
       </footer>
       <div class="menu-overlay">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-xs-12">
-              <a href="#" class="logo"><img src="images/logo.png" /></a>
+        <div class="fixed-top">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="logo col-xs-12 col-sm-4"><a href="#" class="logo"><img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/></a></div>
+              <div class="col-xs-12 col-sm-8">
+                <a href="#" class="close"></a>
+              </div>
             </div>
           </div>
-        </div>
+        </div><!--/.fixed-top-->
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
@@ -126,7 +137,7 @@
                 <li class="col-sm-2 col-xs-12"><a href="#">Industries</a></li>
                 <li class="col-sm-2 col-xs-12"><a href="#">Ink and Supplies</a></li>
                 <li class="col-sm-2 col-xs-12"><a href="#">Small Business</a></li>
-                <li class="last"><a href="#">U.S. English</a></li>
+                <li class="col-sm-2 col-xs-12 last"><a href="#">U.S. English</a></li>
               </ul>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
