updated navigation and home area - hiding desktop/tablet-only items

--- a/app/index.html
+++ b/app/index.html
@@ -35,12 +35,16 @@
       <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="logo col-xs-12 col-sm-4"><a href="#" class="logo"><img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/></a></div>
-            <nav class="col-xs-12 col-sm-8">
+            <div class="logo col-xs-4">
+              <a href="#">
+                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
+              </a>
+            </div>
+            <nav class="col-xs-8">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
                 <li><a href="#" class="icn-search"></a></li>
-                <li><a href="#" class="icn-cart"></a></li>
+                <li><a href="#" class="icn-cart hidden-xs"></a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
@@ -62,20 +66,20 @@
                         <h2 class="category-4">category 4 headline</h2>
                       </div><!--/.col-xs-12-->
                     </div><!--/.row-->
-                    <div class="row links">
-                      <div class="cat col-xs-12 col-sm-2 col-sm-offset-1">
+                    <div class="row links hidden-xs">
+                      <div class="cat col-sm-2 col-sm-offset-1">
                         <a href="#" class="category-1">Customer Information Management</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-xs-12 col-sm-2">
+                      <div class="cat col-sm-2">
                         <a href="#" class="category-2">Customer Engagement Solutions</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-xs-12 col-sm-2">
+                      <div class="cat col-sm-2">
                         <a href="#" class="category-3">Shipping and Mailing</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-xs-12 col-sm-2">
+                      <div class="cat col-sm-2">
                         <a href="#" class="category-4">Global eCommerce</a>
                       </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-xs-12 col-sm-2 last">
+                      <div class="cat col-sm-2 last">
                         <a href="#" class="category-5">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                     </div>
@@ -111,8 +115,13 @@
         <div class="fixed-top">
           <div class="container-fluid">
             <div class="row">
-              <div class="logo col-xs-12 col-sm-4"><a href="#" class="logo"><img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/></a></div>
-              <div class="col-xs-12 col-sm-8">
+              <div class="logo col-xs-4">
+                <a href="#">
+                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                  <img src="images/icn-home.png" class="visible-xs-*" />
+                </a>
+                </div>
+              <div class="col-xs-8">
                 <a href="#" class="close"></a>
               </div>
             </div>
