search field styling and placeholder script added

--- a/app/index.html
+++ b/app/index.html
@@ -115,13 +115,13 @@
         <div class="fixed-top">
           <div class="container-fluid">
             <div class="row">
-              <div class="logo col-xs-4">
+              <div class="logo col-sm-4 col-xs-10">
                 <a href="#">
                   <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
-                  <img src="images/icn-home.png" class="visible-xs-*" />
                 </a>
-                </div>
-              <div class="col-xs-8">
+                <input type="text" value="Search" class="visible-xs mobile-search" />
+              </div>
+              <div class="col-xs-1 col-sm-8 col-xs-offset-1">
                 <a href="#" class="close"></a>
               </div>
             </div>
