--- a/app/index.html
+++ b/app/index.html
@@ -35,16 +35,17 @@
       <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="logo col-xs-4">
+            <div class="logo col-xs-6">
               <a href="#">
-                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
+                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
             </div>
-            <nav class="col-xs-8">
+            <nav class="col-xs-6">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
-                <li><a href="#" class="icn-search"></a></li>
-                <li><a href="#" class="icn-cart hidden-xs"></a></li>
+                <li><a href="#" class="icn-search hidden-xs"></a></li>
+                <li><a href="#" class="icn-cart"></a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
@@ -121,7 +122,7 @@
                 </a>
                 <input type="text" value="Search" class="visible-xs mobile-search" />
               </div>
-              <div class="col-xs-1 col-sm-8 col-xs-offset-1">
+              <div class="col-xs-2 col-sm-8">
                 <a href="#" class="close"></a>
               </div>
             </div>
@@ -130,23 +131,33 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
+              <div class="row visible-xs mobile-top-links">
+                <div class="col-xs-6"><a href="#">My Account</a></div>
+                <div class="col-xs-6"><a href="#">U.S. English</a></div>
+                <div class="col-xs-12">
+                  <div class="divider"></div>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-xs-12">
-                  <ul class="catLinks">
+                  <ul class="cat-links">
                     <li><a href="#">Customer Information Management</a></li>
                     <li><a href="#">Location Intelligence</a></li>
                     <li><a href="#">Customer Engagement</a></li>
                     <li><a href="#">Shipping and Mailing</a></li>
-                    <li><a href="#">Global eCommerce</a></li>
+                    <li class="last"><a href="#">Global eCommerce</a></li>
                   </ul>
+                  <div class="col-xs-12">
+                    <div class="divider"></div>
+                  </div>
                 </div>
               </div>
-              <ul class="bottomLinks row">
-                <li class="col-sm-2 col-xs-12 col-sm-offset-1"><a href="#">Enterprise Support</a></li>
-                <li class="col-sm-2 col-xs-12"><a href="#">Industries</a></li>
-                <li class="col-sm-2 col-xs-12"><a href="#">Ink and Supplies</a></li>
-                <li class="col-sm-2 col-xs-12"><a href="#">Small Business</a></li>
-                <li class="col-sm-2 col-xs-12 last"><a href="#">U.S. English</a></li>
+              <ul class="bottom-links row">
+                <li class="col-sm-2 col-xs-6 col-sm-offset-1"><a href="#">Enterprise Support</a></li>
+                <li class="col-sm-2 col-xs-6"><a href="#">Industries</a></li>
+                <li class="col-sm-2 col-xs-6"><a href="#">Ink and Supplies</a></li>
+                <li class="col-sm-2 col-xs-6"><a href="#">Small Business</a></li>
+                <li class="col-sm-2 hidden-xs last"><a href="#">U.S. English</a></li>
               </ul>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
