moved brand story out of index.html and into it's own page

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -55,37 +55,26 @@
         <div id="wrapper">
           <div class="header"></div>
           <div class="snappish-main">
-              <article class="welcome" id="welcome">
-                  <div class="catbg"></div>
-                  <div class="container-fluid">
-                    <div class="row">
-                      <div class="col-xs-12 page-title">
-                        <h1 class="init">Dicut tacimates ei vim</h1>
-                        <h2 class="category-1">lorem ipsum dolor sit</h2>
-                        <h2 class="category-2">category 2 headline</h2>
-                        <h2 class="category-3">category 3 headline</h2>
-                        <h2 class="category-4">category 4 headline</h2>
-                      </div><!--/.col-xs-12-->
-                    </div><!--/.row-->
-                    <div class="row links hidden-xs">
-                      <div class="cat col-sm-2 col-sm-offset-1">
-                        <a href="#" class="category-1">Customer Information Management</a>
-                      </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-sm-2">
-                        <a href="#" class="category-2">Customer Engagement Solutions</a>
-                      </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-sm-2">
-                        <a href="#" class="category-3">Shipping and Mailing</a>
-                      </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-sm-2">
-                        <a href="#" class="category-4">Global eCommerce</a>
-                      </div><!--/.col-sm-2.col-xs-12-->
-                      <div class="cat col-sm-2 last">
-                        <a href="#" class="category-5">Location Intelligence</a>
-                      </div><!--/.col-sm-2.col-xs-12-->
+              <article id="story-1">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="story-title col-xs-12 col-sm-4 col-sm-offset-4">
+                        <h3>LOREM IPSUM DE AMET</h3>
+                        <p>Lorem ipsum dolor amet, dicunt tacimates ai vim, te viris mediocrem mei. Eu eum sint debet intellegat. Alii alia pro ad, pri at mutat accusamus. Vel ut nihil laudem petentium.<p>
                     </div>
-                  </div>
-              </article><!--/.welcome-->
+                  </div><!--/.row-->
+                  <img class="down-arrow" src="images/arrow.png">
+                </div><!--/.container-fluid-->
+              </article><!--/#story-1-->
+              <article id="story-2">
+
+              </article><!--/.brand-story-3-->
+              <article id="story-3">
+
+              </article><!--/.brand-story-3-->
+              <article id="story-4">
+
+              </article><!--/.brand-story-4-->
           </div>
         </div><!--/#wrapper-->
       </div><!--#content-area-->
