separated brand story and home scss files

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -20,6 +20,7 @@
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/brand-story.css">
         <!-- endbuild -->
 
         <!--[if lt IE 9]>
@@ -36,7 +37,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
-              <a href="#">
+              <a href="index.html">
                 <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
