--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/home.css">
         <!-- endbuild -->
 
         <!--[if lt IE 9]>
