--- a/app/index.html
+++ b/app/index.html
@@ -112,25 +112,19 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
-              <div class="row visible-xs mobile-top-links">
-                <div class="col-xs-6"><a href="#">My Account</a></div>
-                <div class="col-xs-6"><a href="#">U.S. English</a></div>
-                <div class="col-xs-12">
-                  <div class="divider"></div>
-                </div>
-              </div>
               <div class="row">
                 <div class="col-xs-12">
                   <ul class="cat-links">
+                    <li class="visible-xs"><a href="#">About Us</a></li>
                     <li><a href="#">Customer Information Management</a></li>
                     <li><a href="#">Location Intelligence</a></li>
                     <li><a href="#">Customer Engagement</a></li>
                     <li><a href="#">Shipping and Mailing</a></li>
                     <li class="last"><a href="#">Global eCommerce</a></li>
                   </ul>
-                  <div class="col-xs-12">
-                    <div class="divider"></div>
-                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="divider"></div>
                 </div>
               </div>
               <ul class="bottom-links row">
@@ -140,6 +134,13 @@
                 <li class="col-sm-2 col-xs-6"><a href="#">Small Business</a></li>
                 <li class="col-sm-2 hidden-xs last"><a href="#">U.S. English</a></li>
               </ul>
+              <div class="row visible-xs mobile-links">
+                <div class="col-xs-12">
+                  <div class="divider"></div>
+                </div>
+                <div class="col-xs-6"><a href="#">My Account</a></div>
+                <div class="col-xs-6"><a href="#">U.S. English</a></div>
+              </div>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
