removed snappish from home page, now only on brand story page

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
       <div id="home-area">
         <div id="wrapper">
           <div class="header"></div>
-          <div class="snappish-main">
+          <!--<div class="snappish-main">-->
               <article class="welcome" id="welcome">
                   <div class="catbg"></div>
                   <div class="container-fluid">
@@ -87,7 +87,7 @@
                     </div>
                   </div>
               </article><!--/.welcome-->
-          </div>
+          <!--</div>snappish-main closing div-->
         </div><!--/#wrapper-->
       </div><!--#content-area-->
       <footer>
@@ -149,10 +149,6 @@
 
         <!-- build:js scripts/vendor.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
-        <script src="scripts/vendors/jquery/jquery.mousewheel.min.js"></script>
-        <script src="scripts/vendors/jquery/jquery.event.move.js"></script>
-        <script src="scripts/vendors/jquery/jquery.event.swipe.js"></script>
-        <script src="scripts/vendors/snappish/jquery.snappish.js"></script>
         <!-- endbuild -->
 
 
