mobile home page category section designs

--- a/app/index.html
+++ b/app/index.html
@@ -85,8 +85,44 @@
                         <a href="#" class="category-5">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                     </div>
+                    <img class="down-arrow" src="images/arrow.png">
                   </div>
               </article><!--/.welcome-->
+              <article class="visible-xs category-1">
+                <div class="container-fluid">
+                  <div class="row">
+
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/.category-1-->
+              <article class="visible-xs category-2">
+                <div class="container-fluid">
+                  <div class="row">
+
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/.category-2-->
+              <article class="visible-xs category-3">
+                <div class="container-fluid">
+                  <div class="row">
+
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/.category-3-->
+              <article class="visible-xs category-4">
+                <div class="container-fluid">
+                  <div class="row">
+
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/.category-4-->
+              <article class="visible-xs category-5">
+                <div class="container-fluid">
+                  <div class="row">
+
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
+              </article><!--/.category-5-->
           <!--</div>snappish-main closing div-->
         </div><!--/#wrapper-->
       </div><!--#content-area-->
