menu fixed for all both pages desktop and mobile

--- a/app/index.html
+++ b/app/index.html
@@ -85,27 +85,26 @@
                         <a href="#" class="category-5">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                     </div>
-                    <img class="down-arrow" src="images/arrow.png">
                   </div>
               </article><!--/.welcome-->
               <article class="visible-xs category-1">
                 <div class="container-fluid">
                   <div class="row">
-
+                    <h2>LOREM IPSUM DE AMET</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-1-->
               <article class="visible-xs category-2">
                 <div class="container-fluid">
                   <div class="row">
-
+                    <h2>MUTAT ACCUSAMUS VEL UT NIHIL</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-2-->
               <article class="visible-xs category-3">
                 <div class="container-fluid">
                   <div class="row">
-
+                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-3-->
