--- a/app/index.html
+++ b/app/index.html
@@ -61,11 +61,7 @@
                   <div class="container-fluid">
                     <div class="row">
                       <div class="col-xs-12 page-title">
-                        <h1 class="init">Dicut tacimates ei vim</h1>
-                        <h2 class="category-1">lorem ipsum dolor sit</h2>
-                        <h2 class="category-2">category 2 headline</h2>
-                        <h2 class="category-3">category 3 headline</h2>
-                        <h2 class="category-4">category 4 headline</h2>
+                        <h1 class="init">Brand Story FPO</h1>
                       </div><!--/.col-xs-12-->
                     </div><!--/.row-->
                     <div class="row links hidden-xs">
@@ -73,52 +69,60 @@
                         <a href="#" class="category-1">Customer Information Management</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
-                        <a href="#" class="category-2">Customer Engagement Solutions</a>
+                        <a href="#" class="category-2">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
-                        <a href="#" class="category-3">Shipping and Mailing</a>
+                        <a href="#" class="category-3">Customer Engagement</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
-                        <a href="#" class="category-4">Global eCommerce</a>
+                        <a href="#" class="category-4">Shipping and Mailing</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2 last">
-                        <a href="#" class="category-5">Location Intelligence</a>
+                        <a href="#" class="category-5">Global Ecommerce</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                     </div>
                   </div>
               </article><!--/.welcome-->
-              <article class="visible-xs category-1">
+              <article class="visible-xs default group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>LOREM IPSUM DE AMET</h2>
+                    <h2>Brand Story FPO</h2>
+                  </div>
+                </div>
+              </article><!--/.default-->
+              <article class="visible-xs category-1 group">
+                <div class="container-fluid">
+                  <div class="row">
+                    <h2>Today, we've powered 2,435,865 check-ins on Facebook.</h2>
+                    <p>Turn information into insights by connecting geography with data.</p>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-1-->
-              <article class="visible-xs category-2">
+              <article class="visible-xs category-2 group">
                 <div class="container-fluid">
                   <div class="row">
                     <h2>MUTAT ACCUSAMUS VEL UT NIHIL</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-2-->
-              <article class="visible-xs category-3">
+              <article class="visible-xs category-3 group">
                 <div class="container-fluid">
                   <div class="row">
                     <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-3-->
-              <article class="visible-xs category-4">
+              <article class="visible-xs category-4 group">
                 <div class="container-fluid">
                   <div class="row">
-
+                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-4-->
-              <article class="visible-xs category-5">
+              <article class="visible-xs category-5 group">
                 <div class="container-fluid">
                   <div class="row">
-
+                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-5-->
