--- a/app/index.html
+++ b/app/index.html
@@ -57,11 +57,12 @@
           <div class="header"></div>
           <!--<div class="snappish-main">-->
               <article class="welcome" id="welcome">
-                  <div class="catbg"></div>
+                  <div class="animated catbg"></div>
                   <div class="container-fluid">
                     <div class="row">
                       <div class="col-xs-12 page-title">
-                        <h1 class="init">Brand Story FPO</h1>
+                        <h1 class="animated fadeInUp">Brand Story FPO</h1>
+                        <p class="animated fadeInUp"><a href="brand-story.html">lorem ipsum sit amet</a></p>
                       </div><!--/.col-xs-12-->
                     </div><!--/.row-->
                     <div class="row links hidden-xs">
@@ -86,43 +87,46 @@
               <article class="visible-xs default group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>Brand Story FPO</h2>
+                    <h1 class="animated fadeInUp">Brand Story FPO</h1>
+                    <p class="animated fadeInUp"><a href="brand-story.html">lorem ipsum sit amet</a></p>
                   </div>
                 </div>
               </article><!--/.default-->
               <article class="visible-xs category-1 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>Today, we've powered 2,435,865 check-ins on Facebook.</h2>
-                    <p>Turn information into insights by connecting geography with data.</p>
+                    <h2 class="animated fadeInUp">Today, we've powered 2,435,865 check-ins on Facebook.</h2>
+                    <p class="animated fadeInUp">Turn information into insights by connecting geography with data.</p>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-1-->
               <article class="visible-xs category-2 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>MUTAT ACCUSAMUS VEL UT NIHIL</h2>
+                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <p class="animated fadeInUp">Turn information into insights by connecting geography with data.</p>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-2-->
               <article class="visible-xs category-3 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-3-->
               <article class="visible-xs category-4 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <h2 class="animated fadeInUp">Right Now, we're printing and sorting 9,125,744 bank statements.</h2>
+                    <p class="animated fadeInUp">Print. Mail. Ship. Increase productivity while lowering costs.</p>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-4-->
               <article class="visible-xs category-5 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2>PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-5-->
