updated background images for all story frames

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -68,14 +68,11 @@
                 </div><!--/.container-fluid-->
               </article><!--/#story-1-->
               <article id="story-2">
-
+                <img class="down-arrow" src="images/arrow.png">
               </article><!--/.brand-story-3-->
               <article id="story-3">
-
               </article><!--/.brand-story-3-->
-              <article id="story-4">
 
-              </article><!--/.brand-story-4-->
           </div>
         </div><!--/#wrapper-->
       </div><!--#content-area-->
