--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,8 @@
               <article class="visible-xs category-5 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <h2 class="animated fadeInUp">Yesterday, we helped 10,456 eBay packages clear customs in India.</h2>
+                    <p class="animated fadeInUp">Streamline international shipping by removing hurdles.</p>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-5-->
